# typhon

./: .gitignore  .metadata  CMakeLists.txt  README.md  cpp_parser.py  create_auxiliary_libraries.py  create_keyboard_adaptations.py  create_library_and_add_to_assets.py  create_shader_compiler_library.py  ffigen.yaml  ffigen_typhon.yaml  pubspec.yaml  setup_cpp_library.py
android/app/: build.gradle
assets/: cmake_template.txt
assets/lib/: CMakeLists.txt  liblua_cpp_binder.dylib  libtyphon.dylib  libtyphon_lua.dylib  shaderc.lib
assets/lib/auxiliary_libraries/: libmodel_loader.dylib
assets/lib/include/: engine.h  general.h  generic_reflection.h  typhon.h
assets/lib/includes/: crunch_texture_packer.h  engine.h  game_object.h  general.h  keyboard_adaptations.h  shader_compiler.h  typhon.h
assets/lib/includes/TerrariaLikeGame/: FlyingTreant.h
assets/lib/src/: ecs_registry.cpp  ecs_registry.h  engine.cpp  engine.h  game_object.cpp  game_object.h  game_object_traits.h  general.h  mono_manager.h  object.h  rendering_engine.cpp  rendering_engine.h  shader_compiler.cpp  shader_compiler.h  typhon.cpp  typhon.h
assets/lib/src/auxiliary_libraries/: model_loader.h  shader_compiler.cpp  shader_compiler.h
assets/lib/src/auxiliary_libraries_helpers/: auxiliary_libraries_interface.h  auxiliary_library.cpp  auxiliary_library.h
assets/lib/src/component/: component.h  make_component.cpp  make_component.h
assets/lib/src/component/default_components/: some_component.h  transform.h
assets/lib/src/engine/: engine.cpp  rendering_engine.cpp  rendering_engine.h
assets/lib/src/engine/entity_component_system/: ecs_registry.h
assets/lib/src/engine/platform_specific/MacOS/: metal_rendering_engine.h  metal_rendering_engine.mm
assets/lib/src/macos/: macos_engine.cpp  macos_engine.h  macos_renderer.h  macos_view_delegate.h
assets/lib/src/object/: object.cpp  object.h  object_handle.cpp  object_storage.h
assets/lib/src/prefab/: prefab.cpp  prefab.h
assets/lib/src/prefab/defaults/: cube.h  empty_object.h
assets/lib/src/ui/: ui_builder.h  ui_element.h
assets/lib/src/utils/: color.h  general.cpp  general.h
auxiliary_libraries/: CMakeLists.txt  auxiliary_libraries_interface.h
auxiliary_libraries/model_loader/: CMakeLists.txt  create_library.py  exports.cpp  exports.h  model_loader.cpp  model_loader.h
auxiliary_libraries/shader_compiler/: CMakeLists.txt  create_library.py  exports.cpp  exports.h  shader_compiler.cpp  shader_compiler.h
c_sharp_interface/: CMakeLists.txt
c_sharp_interface/src/: crunch_texture_packer.h  ecs_registry.h  engine.cpp  engine.h  game_object.cpp  game_object.h  game_object_traits.cpp  game_object_traits.h  gameobject.cpp  gameobject.h  gameobject_middle_man.cpp  gameobject_middle_man.h  general.cpp  general.h  generic_reflection.h  keyboard_adaptations.h  mono_manager.cpp  mono_manager.h  npc.h  player.h  reflected_gameobject.h  reflection.cpp  reflection.h  reflection_checks.h  shader_compiler.cpp  shader_compiler.h  typhon.cpp  typhon.h  typhon_generated.cpp
c_sharp_interface/src/TerrariaLikeGame/: FlyingTreant.h
c_sharp_interface/src/macos/: macos_engine.cpp  macos_engine.h  macos_view_delegate.h
c_sharp_interface/tests/: mac_test.cpp  main_test.cpp  object_test.cpp  shader_tests.cpp  shared_library_test.cpp
cpp_library/: CMakeLists.txt  main.cpp  main_template.cpp
cpp_library/src/: component.h  ecs_registry.cpp  ecs_registry.h  engine.cpp  engine.h  game_object.cpp  game_object.h  general.h  generic_reflection.cpp  keyboard_adaptations.h  mono_manager.cpp  object.h  reflection_checks.h  rendering_engine.cpp  rendering_engine.h  shader_compiler.cpp  shader_compiler.h  typhon.cpp  typhon.h  typhon_generated.cpp
cpp_library/src/auxiliary_libraries/: model_loader.h  shader_compiler.h
cpp_library/src/auxiliary_libraries_helpers/: auxiliary_library.h
cpp_library/src/component/: component.h  make_component.cpp  make_component.h
cpp_library/src/component/default_components/: transform.h
cpp_library/src/engine/: engine.cpp  engine.h  rendering_canvas.h  rendering_engine.cpp  rendering_engine.h
cpp_library/src/engine/entity_component_system/: ecs_registry.cpp
cpp_library/src/engine/platform_specific/MacOS/: metal_rendering_engine.mm
cpp_library/src/features/project_selection/: project_selection_canvas.cpp  project_selection_canvas.h
cpp_library/src/macos/: macos_engine.h  macos_renderer.h  macos_view_delegate.h  mtk_view_wrapper.h
cpp_library/src/object/: object.cpp  object.h  object_handle.cpp  object_handle.h  object_storage.h
cpp_library/src/prefab/: prefab.cpp  prefab.h
cpp_library/src/prefab/defaults/: cube.h  empty_object.h
cpp_library/src/texture_packer/: crunch_texture_packer.h
cpp_library/src/ui/: ui_element.h
cpp_library/src/utils/: color.cpp  color.h  general.h  generic_reflection.h  keyboard_adaptations.h  utils.h
cpp_library/tests/: main_test.cpp  shader_tests.cpp
ios/Runner/: Info.plist
lib/: NPC.dart  Player.dart  console_panel.dart  engine.dart  engine_sub_window.dart  environment.dart  file_viewer_panel.dart  file_viewer_panel_test.dart  game_component.dart  game_object.dart  general_widgets.dart  hierarchy_panel.dart  inspector_panel.dart  main.dart  main_engine_frontend.dart  native_view_interface.dart  project_choice_window.dart  recompiling_dialog.dart  regex_parser.dart  scene_viewer.dart  scene_viewer_panel.dart  tree_viewer.dart  typhon_bindings.dart  typhon_bindings_generated.dart
linux/: CMakeLists.txt  my_application.cc
lua_binding_library/: CMakeLists.txt
lua_binding_library/src/: editor_window.h  lua.cpp  lua.h  typhon.cpp  typhon.h  typhon_lua.cpp  typhon_lua.h
macos/: Podfile
old_code/: typhon.cpp  typhon.h
python_scripts/: cpp_parser.py  download_dependencies.py  modify_dart_files.py  parser_test.py
shader_compiler_library/: CMakeLists.txt
shader_compiler_library/src/: exports.cpp  exports.h  shader_compiler.h
shader_compiler_library/tests/: shader_tests.cpp
test/: regex_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+102 files in other folders)
